Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-96736
Insert #line directives to custom material and effect shaders in order to print useful line numbers in error messages
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P3: Somewhat important
Fix Version/s:
6.3.0 Alpha
Affects Version/s:
6.2
Component/s:
Quick: 3D
Labels:
None
Commits:
1a5e88c3ad779436791186b018973e474fe06a8a (qt/qtquick3d/dev) e4a828be3566e6e3ee81f3c32e743bad781cdf56 (qt/qtquick3d/6.2)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Christian
Reporter:
Laszlo Agocs
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
21 Sep '21 13:03
Updated:
04 Nov '21 15:25
Resolved:
04 Nov '21 14:49
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Insert line directive for custom and effect shaders
Gerrit Review:
Insert line directive for custom and effect shaders
Gerrit Review: